fixed spacing between lines of text

--- a/style.css
+++ b/style.css
@@ -25,11 +25,12 @@ body{
 
   #showcase h1{
     font-size:50px;
-    line-height: 1.2px;
+    line-height: 65px;
   }
   
   #showcase p{
     font-size: 20px;
+    ;
   }
   
   #showcase .button{
